--- a/quickstart-learnfast/recommendation/recommender_System.ipynb
+++ b/quickstart-learnfast/recommendation/recommender_System.ipynb
@@ -524,7 +524,7 @@
        "\n",
        "    `The Departed (2006)`\n",
        "\n",
-       "    It's a crime thriller film directed by Martin Scorsese. The movie has received critical acclaim for its plot, direction, and performances. The movie is about an undercover cop and a mole in the police department who try to identify each other while infiltrating an Irish gang in South Boston. Since you enjoyed watching crime and thriller movies, I believe you will enjoy watching this movie."
+       "    It's a crime thriller film directed by Martin Scorsese. The movie has a star-studded cast and has won several awards, including the Academy Award for Best Picture. The Departed is a gripping story of crime and corruption, with excellent performances from the cast. If you enjoyed watching The Godfather and Scarface, you will definitely enjoy The Departed."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -579,9 +579,9 @@
       "text/markdown": [
        "Rating Score for Chronicle (2012): 8\n",
        "\n",
-       "Based on your movie watch history, I would recommend Chronicle (2012) with a rating score of 8 out of 10.\n",
+       "Based on your movie watch history, I would recommend you to watch Chronicle (2012) with a rating score of 8 out of 10.\n",
        "\n",
-       "The reason for the rating is that Chronicle (2012) is a science fiction movie with elements of action and drama, which are genres you have shown interest in. The movie follows three high school students who gain superpowers and must learn to control them while dealing with the consequences of their actions. The movie has received positive reviews for its unique take on the superhero genre and its strong performances."
+       "The reason for the rating is that Chronicle (2012) is a science fiction movie with a mix of action and drama, which are genres you have shown interest in. The movie is about three high school friends who gain superpowers and how they deal with their newfound abilities. The movie has received positive reviews for its unique storytelling and impressive visual effects."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1002,47 +1002,38 @@
        "    Scary Movie 5 (2013) - Comedy  \n",
        "    Bad Grandpa (2013) - Comedy  \n",
        "    Out of the Furnace (2013) - Drama  \n",
-       "    The Social Network (2010) - Biography  \n",
+       "    The Social Network (2010) - Drama  \n",
        "    City Lights (1931) - Comedy  \n",
        "\n",
        "    2. Calculate the weighted score for each genre\n",
        "    Action: (10+8+5+7+1+7)/6 = 6.3  \n",
        "    Sci-Fi: (9+8)/2 = 8.5  \n",
-       "    Biography: (9+8)/2 = 8.5  \n",
+       "    Biography: 9/1 = 9.0  \n",
        "    Drama: (7+9+9+6+7)/5 = 7.6  \n",
        "    Animation: (3+8)/2 = 5.5  \n",
        "    Adventure: (9+9)/2 = 9.0  \n",
        "    Thriller: 7/1 = 7.0  \n",
-       "    Horror: (5+8+6)/3 = 6.3  \n",
        "    Comedy: (8+10+6+10+6+8+6+8+5+7)/10 = 7.4  \n",
+       "    Horror: (5+8+6)/3 = 6.3  \n",
        "\n",
        "    3. Cluster the movies based on the genres and weighted score\n",
-       "    Cluster 1 (High-rated adventures):  \n",
-       "    - The Secret Life of Walter Mitty (2013)  \n",
-       "    - The Hobbit The Desolation of Smaug (2013)  \n",
-       "    \n",
-       "    Cluster 2 (High-rated dramas and biographies):  \n",
+       "    Cluster 1 (High-rated dramas and biographies):  \n",
        "    - Captain Phillips (2013)  \n",
        "    - All Is Lost (2013)  \n",
        "    - Prisoners (2013)  \n",
        "    - Enough Said (2013)  \n",
        "    - jOBS (2013)  \n",
+       "    - Hours (2013)  \n",
        "    - Out of the Furnace (2013)  \n",
        "    - The Social Network (2010)  \n",
-       "    - City Lights (1931)  \n",
-       "    \n",
-       "    Cluster 3 (High-rated sci-fi and action):  \n",
-       "    - World War Z (2013)  \n",
+       "\n",
+       "    Cluster 2 (High-rated adventures and sci-fi):  \n",
        "    - Gravity (2013)  \n",
-       "    - Iron Man 3 (2013)  \n",
-       "    - 2 Guns (2013)  \n",
+       "    - The Hobbit The Desolation of Smaug (2013)  \n",
        "    - Elysium (2013)  \n",
-       "    - Pacific Rim (2013)  \n",
-       "    - Star Trek Into Darkness (2013)  \n",
-       "    - Olympus Has Fallen (2013)  \n",
-       "    - Escape Plan (2013)  \n",
-       "    \n",
-       "    Cluster 4 (High-rated comedies):  \n",
+       "\n",
+       "    Cluster 3 (High-rated comedies):  \n",
+       "    - The Secret Life of Walter Mitty (2013)  \n",
        "    - Were the Millers (2013)  \n",
        "    - The Wolf of Wall Street (2013)  \n",
        "    - American Hustle (2013)  \n",
@@ -1051,23 +1042,36 @@
        "    - Monsters University (2013)  \n",
        "    - This Is the End (2013)  \n",
        "    - The Heat (2013)  \n",
-       "    - Scary Movie 5 (2013)  \n",
        "    - Bad Grandpa (2013)  \n",
        "\n",
+       "    Cluster 4 (High-rated horror and thriller):  \n",
+       "    - Now You See Me (2013)  \n",
+       "    - Insidious Chapter 2 (2013)  \n",
+       "    - The Conjuring (2013)  \n",
+       "    - Insidious (2010)  \n",
+       "    - Scary Movie 5 (2013)  \n",
+       "\n",
+       "    Cluster 5 (Low-rated movies):  \n",
+       "    - Frozen (2013)  \n",
+       "    - Iron Man 3 (2013)  \n",
+       "    - 2 Guns (2013)  \n",
+       "    - Star Trek Into Darkness (2013)  \n",
+       "    - Olympus Has Fallen (2013)  \n",
+       "    - Kick-Ass 2 (2013)  \n",
+       "\n",
        "    4. Predict User's Rating Score\n",
-       "    To predict the rating for \"The Gold Rush (1925),\" we can use the weighted scores of similar genres from the previous clustering and the user's preferences. \"The Gold Rush\" is a comedy-drama film. Based on the user's preferences, we can see that the user enjoys comedy and drama films.\n",
+       "    To predict the rating for \"The Gold Rush (1925),\" we can use the weighted scores of similar genres from the previous clustering and the user's preferences. \"The Gold Rush\" is a comedy film. Based on the user's preferences, we can see that the user enjoys comedy films.\n",
        "\n",
        "    Using the weighted scores calculated earlier:\n",
        "\n",
        "    Comedy: 7.4\n",
-       "    Drama: 7.6\n",
        "    \n",
-       "    Since \"The Gold Rush\" is a blend of both comedy and drama, we can take an average of the weighted scores of these two genres to predict the rating:\n",
+       "    Since \"The Gold Rush\" is a comedy, we can use the weighted score of the comedy genre to predict the rating:\n",
        "\n",
-       "    Predicted Rating = (Comedy Weighted Score + Drama Weighted Score) / 2\n",
-       "    Predicted Rating = (7.4 + 7.6) / 2 = 7.5\n",
+       "    Predicted Rating = Comedy Weighted Score\n",
+       "    Predicted Rating = 7.4\n",
        "\n",
-       "    So, based on the user's preferences and the movie's genres, we can predict that the user would likely rate \"The Gold Rush (1925)\" around 7.5 out of 10."
+       "    So, based on the user's preferences and the movie's genre, we can predict that the user would likely rate \"The Gold Rush (1925)\" around 7.4 out of 10. However, it's important to note that \"The Gold Rush\" is a silent film from 1925, which may not be to everyone's taste."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1139,9 +1143,9 @@
        "\n",
        "    2. Calculate the weighted score for each genre\n",
        "    Action: (9+8+8+7+7+7)/6 = 7.7  \n",
-       "    Drama: (9+5+10+9+8+7+7+7+7)/9 = 7.7  \n",
+       "    Drama: (9+5+10+9+8+7+7+7+7)/9 = 7.4  \n",
        "    Thriller: (6+7+7)/3 = 6.7  \n",
-       "    Sci-Fi: (9+8+7+6+6+10+7+7+7)/9 = 7.4  \n",
+       "    Sci-Fi: (9+8+7+6+6+6)/6 = 7.0  \n",
        "    Animation: 8/1 = 8.0  \n",
        "    Comedy: (6+8+4+7+8)/5 = 6.6  \n",
        "    Horror: (8+7+7+3+1+7+7)/7 = 5.4  \n",
@@ -1149,35 +1153,29 @@
        "    3. Cluster the movies based on the genres and weighted score\n",
        "    Cluster 1 (High-rated actions and sci-fi):  \n",
        "    - Iron Man 3 (2013)  \n",
-       "    - Elysium (2013)  \n",
        "    - Pacific Rim (2013)  \n",
        "    - Star Trek Into Darkness (2013)  \n",
        "    - Olympus Has Fallen (2013)  \n",
+       "    - Oblivion (2013)  \n",
        "    - Dredd (2012)  \n",
-       "    - Hansel & Gretel Witch Hunters (2013)  \n",
-       "    - G.I. Joe Retaliation (2013)  \n",
-       "    - Snakes on a Plane (2006)  \n",
-       "\n",
+       "    \n",
        "    Cluster 2 (High-rated dramas):  \n",
        "    - Zero Dark Thirty (2012)  \n",
        "    - The Great Gatsby (2013)  \n",
        "    - Argo (2012)  \n",
        "    - Fight Club (1999)  \n",
        "    - Donnie Darko (2001)  \n",
-       "\n",
+       "    \n",
        "    Cluster 3 (High-rated animation):  \n",
        "    - Rise of the Guardians (2012)  \n",
-       "\n",
-       "    Cluster 4 (High-rated thrillers):  \n",
-       "    - Side Effects (2013)  \n",
-       "    - Panic Room (2002)  \n",
-       "\n",
-       "    Cluster 5 (Low-rated comedies):  \n",
+       "    \n",
+       "    Cluster 4 (High-rated comedies):  \n",
        "    - The Hangover Part III (2013)  \n",
-       "    - This Is 40 (2012)  \n",
+       "    - Shaun of the Dead (2004)  \n",
+       "    - Grown Ups 2 (2013)  \n",
        "    - Hot Rod (2007)  \n",
-       "\n",
-       "    Cluster 6 (Low-rated horrors):  \n",
+       "    \n",
+       "    Cluster 5 (High-rated horrors and thrillers):  \n",
        "    - The Strangers (2008)  \n",
        "    - House at the End of the Street (2012)  \n",
        "    - The Bay (2012)  \n",
@@ -1185,25 +1183,27 @@
        "    - Devil (2010)  \n",
        "    - Deadgirl (2008)  \n",
        "    - [Rec] (2007)  \n",
+       "    - Snakes on a Plane (2006)  \n",
        "    - [Rec] ?(2009)  \n",
+       "    - Panic Room (2002)  \n",
+       "    - Deep Blue Sea (1999)  \n",
        "\n",
        "    4. Predict User's Rating Score\n",
        "    To predict the rating for \"Burning Bright (2010),\" we can use the weighted scores of similar genres from the previous clustering and the user's preferences. \"Burning Bright\" is a horror-thriller film. Based on the user's preferences, we can see that the user enjoys action, drama, and sci-fi films.\n",
        "\n",
        "    Using the weighted scores calculated earlier:\n",
        "\n",
-       "    Action: 7.7  \n",
-       "    Drama: 7.7  \n",
-       "    Thriller: 6.7  \n",
-       "    Sci-Fi: 7.4  \n",
-       "    Horror: 5.4  \n",
-       "\n",
-       "    Since \"Burning Bright\" is a blend of horror and thriller, we can take an average of the weighted scores of these two genres to predict the rating:\n",
+       "    Action: 7.7\n",
+       "    Drama: 7.4\n",
+       "    Thriller: 6.7\n",
+       "    Sci-Fi: 7.0\n",
+       "    \n",
+       "    Since \"Burning Bright\" is a horror-thriller film, we can take an average of the weighted scores of these two genres to predict the rating:\n",
        "\n",
        "    Predicted Rating = (Thriller Weighted Score + Horror Weighted Score) / 2\n",
        "    Predicted Rating = (6.7 + 5.4) / 2 = 6.05\n",
        "\n",
-       "    So, based on the user's preferences and the movie's genres, we can predict that the user would likely rate \"Burning Bright (2010)\" around 6.05 out of 10. However, since the movie falls under the low-rated horror cluster, it may not be the best recommendation for the user."
+       "    So, based on the user's preferences and the movie's genres, we can predict that the user would likely rate \"Burning Bright (2010)\" around 6.05 out of 10."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1271,10 +1271,10 @@
        "    The Edge of Love (2008) - Drama  \n",
        "\n",
        "    2. Calculate the weighted score for each genre\n",
-       "    Drama: (10+8+10+7+10+8+10+7+9+10+8+10+8+10+6+8+10+10+9+9+10+10+10+9+10+9+10+8+10)/28 = 9.0  \n",
-       "    Action: (10+9+10+5+10+6+10+6)/8 = 8.1  \n",
+       "    Drama: (10+8+10+7+10+8+10+9+7+9+8+10+8+10+10+6+10+8+9+10+9+8+10+10+9+6+9+10+8+10)/30 = 8.9  \n",
+       "    Action: (10+9+10+5+10+6)/6 = 8.3  \n",
        "    Animation: (10+7)/2 = 8.5  \n",
-       "    Crime: (8+6+6)/3 = 6.7  \n",
+       "    Crime: (8+6+6+9)/4 = 7.3  \n",
        "    Horror: (6+10)/2 = 8.0  \n",
        "    Comedy: (10+6)/2 = 8.0  \n",
        "\n",
@@ -1290,6 +1290,9 @@
        "    - Blue Valentine (2010)  \n",
        "    - The Words (2012)  \n",
        "    - The Curious Case of Benjamin Button (2008)  \n",
+       "    - The Lake House (2006)  \n",
+       "    - The Iron Lady (2011)  \n",
+       "    - In the Land of Women (2007)  \n",
        "    - The Edge of Love (2008)  \n",
        "    \n",
        "    Cluster 2 (High-rated action and animation):  \n",
@@ -1300,31 +1303,30 @@
        "    - Brave (2012)  \n",
        "    - Tangled (2010)  \n",
        "    \n",
-       "    Cluster 3 (High-rated horror and comedy):  \n",
+       "    Cluster 3 (High-rated horror and crime):  \n",
        "    - Killing Them Softly (2012)  \n",
        "    - The Lone Ranger (2013)  \n",
        "    - Prisoners (2013)  \n",
-       "    - Dangerous Minds (1995)  \n",
        "    - The Purge (2013)  \n",
        "    - The Conjuring (2013)  \n",
-       "    - This Is the End (2013)  \n",
        "    - Savages (2012)  \n",
        "    - The Stepfather (2009)  \n",
        "\n",
        "    4. Predict User's Rating Score\n",
-       "    To predict the rating for \"Untraceable (2008),\" we can use the weighted scores of similar genres from the previous clustering and the user's preferences. \"Untraceable\" is a crime thriller film. Based on the user's preferences, we can see that the user enjoys drama and action films.\n",
+       "    To predict the rating for \"Untraceable (2008),\" we can use the weighted scores of similar genres from the previous clustering and the user's preferences. \"Untraceable\" is a crime thriller film. Based on the user's preferences, we can see that the user enjoys drama, action, and crime films.\n",
        "\n",
        "    Using the weighted scores calculated earlier:\n",
        "\n",
-       "    Drama: 9.0\n",
-       "    Action: 8.1\n",
+       "    Drama: 8.9\n",
+       "    Action: 8.3\n",
+       "    Crime: 7.3\n",
        "    \n",
-       "    Since \"Untraceable\" is a blend of both drama and action, we can take an average of the weighted scores of these two genres to predict the rating:\n",
+       "    Since \"Untraceable\" is a crime thriller, we can take an average of the weighted scores of these three genres to predict the rating:\n",
        "\n",
-       "    Predicted Rating = (Drama Weighted Score + Action Weighted Score) / 2\n",
-       "    Predicted Rating = (9.0 + 8.1) / 2 = 8.6\n",
+       "    Predicted Rating = (Drama Weighted Score + Action Weighted Score + Crime Weighted Score) / 3\n",
+       "    Predicted Rating = (8.9 + 8.3 + 7.3) / 3 = 8.2\n",
        "\n",
-       "    So, based on the user's preferences and the movie's genres, we can predict that the user would likely rate \"Untraceable (2008)\" around 8.6 out of 10."
+       "    So, based on the user's preferences and the movie's genres, we can predict that the user would likely rate \"Untraceable (2008)\" around 8.2 out of 10."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1359,6 +1361,65 @@
    "source": [
     "# End of notebook"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'Movie Name': 'Captain Phillips (2013)Biography', 'Rating': 8},\n",
+       " {'Movie Name': 'Frozen (2013)', 'Rating': 8},\n",
+       " {'Movie Name': 'Man of Steel (2013)', 'Rating': 6},\n",
+       " {'Movie Name': 'The Wolverine (2013)', 'Rating': 7},\n",
+       " {'Movie Name': 'About Time (2013)', 'Rating': 7},\n",
+       " {'Movie Name': 'The Way Way Back (2013)', 'Rating': 7},\n",
+       " {'Movie Name': 'Youre Next (2011)', 'Rating': 7},\n",
+       " {'Movie Name': 'Prisoners (2013)', 'Rating': 8},\n",
+       " {'Movie Name': 'Olympus Has Fallen (2013)', 'Rating': 4},\n",
+       " {'Movie Name': 'Rush (2013)Biography', 'Rating': 8},\n",
+       " {'Movie Name': 'Were the Millers (2013)', 'Rating': 5},\n",
+       " {'Movie Name': 'Insidious Chapter 2 (2013)', 'Rating': 7},\n",
+       " {'Movie Name': 'R.I.P.D. (2013)', 'Rating': 4},\n",
+       " {'Movie Name': 'After Earth (2013)', 'Rating': 4},\n",
+       " {'Movie Name': 'Enders Game (2013)', 'Rating': 6},\n",
+       " {'Movie Name': 'Runner Runner (2013)', 'Rating': 5},\n",
+       " {'Movie Name': 'Percy Jackson Sea of Monsters (2013)', 'Rating': 5},\n",
+       " {'Movie Name': 'Carrie (2013)', 'Rating': 6},\n",
+       " {'Movie Name': 'Don Jon (2013)', 'Rating': 7},\n",
+       " {'Movie Name': 'Blue Jasmine (2013)', 'Rating': 7},\n",
+       " {'Movie Name': 'The Place Beyond the Pines (2012)', 'Rating': 8},\n",
+       " {'Movie Name': 'Lincoln (2012)', 'Rating': 9},\n",
+       " {'Movie Name': 'Bad Grandpa (2013)', 'Rating': 6},\n",
+       " {'Movie Name': 'The Butler (2013)', 'Rating': 6},\n",
+       " {'Movie Name': 'The To Do List (2013)', 'Rating': 6},\n",
+       " {'Movie Name': 'Fruitvale Station (2013)', 'Rating': 8},\n",
+       " {'Movie Name': 'Salinger (2013)', 'Rating': 7},\n",
+       " {'Movie Name': 'Turbo (2013)', 'Rating': 6},\n",
+       " {'Movie Name': 'The Spectacular Now (2013)', 'Rating': 8},\n",
+       " {'Movie Name': 'Side by Side (2012)', 'Rating': 8},\n",
+       " {'Movie Name': 'Passion (2012)', 'Rating': 5},\n",
+       " {'Movie Name': 'Resolution (2012)', 'Rating': 6},\n",
+       " {'Movie Name': 'Veronica Mars (2014)', 'Rating': 8}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df[\"UserId\"]==12044][[\"Movie Name\",\"Rating\"]].to_dict(\"records\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
